--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1202,6 +1202,11 @@ video {
     padding-right: 2.5rem;
   }
 
+  .md\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
   .md\:py-10 {
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
